[BCEL-135] BCELifier issue: BCELFactory fails to handle float and long constants
[BCEL-137] "Invalid method signature: TT;" when using MethodGen for a method having a generic parameter
[BCEL-138] FieldInstruction.getFieldSize() doesn't decode Type.getTypeSize() output
[BCEL-140] org.apache.bcel.generic.Instruction.equals(Object) does not follow Object.equals(Object) rules
[BCEL-141] Select instructions should implement StackConsumer instead of StackProducer
[BCEL-143] Fix CPL License issues with EnclosingMethod.java and LocalVariableTypeTable.java
[BCEL-145] Type.getReturnTypeSize() doesn't decode Type.getTypeSize() output
[BCEL-146] SyntheticRepository.loadClass() fails to close the inputStream
[BCEL-148] BCELifier produces incorrect code for methods containing loads of class literals from constant pool
[BCEL-151] Code attribute size not updated
[BCEL-152] Incorrect link for Jasmin assembler language
[BCEL-153] Examples not present in source or binary downloads
[BCEL-154] ClassParser.parse() generates NPE if it cannot open the file
[BCEL-155] InstConstraintVisitor does not handle class constants
[BCEL-156] Pass3bVerifier crashes on empty methods
[BCEL-159] LocalVariableGen.getLocalVariable() computes incorrect length
[BCEL-164] Method does not have a method to access parameter annotations
[BCEL-167] ClassPath.getResource does not correctly perform URL escaping
[BCEL-173] ClassParser fails to parse JDK classes in Java 8: ClassFormatException: Invalid byte tag in constant pool
[BCEL-174] Verification of interfaces with default methods fails with Java 8
[BCEL-177] MethodParameters should read 1 byte not two for parameter count
[BCEL-181] ClassLoaderRepository.loadClass(String) leaks input streams


Feedback
--------

Open source works best when you give feedback:

    http://commons.apache.org/bcel

Please direct all bug reports to JIRA:

    https://issues.apache.org/jira/browse/BCEL

Or subscribe to the commons-user mailing list

The Apache Commons Team